# flodviddar

./: .gitignore  ARCHITECTURE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  FILES_CREATED.md  Lima.linux-test.yml  Makefile  QUICKSTART.md  README.md  TESTING.md  VERIFICATION.md  action.yaml  merge_whitelist.py  toto.json  whitelist.json
.cargo/: config.toml
.github/workflows/: augment-whitelist.yml  ci.yml  populate-whitelist.yml  release_deploy_debs.yml  test-action.yml  test.yml  test_cancel_on_violation.yml  tests.yml
examples/: auto_whitelist_demo.sh  cancel_on_violation.sh  complete_ci_pipeline.sh  github_actions.yml  gitlab_ci.yml  standalone_ci.sh
scripts/: create_cancel_script.sh
src/: daemon.rs  github.rs  main.rs
tests/: README.md  ci_integration_example.sh  cli.rs  run_all_tests.sh  test_cancel_script.sh  test_cve_2025_30066.sh  test_full_suite.sh  test_watch_daemon.sh  test_whitelist_lifecycle.sh  verify_ebpf.sh
