[package]
name = "flodviddar"
version = "0.1.0"
edition = "2021"
authors = ["EDAMAME Technologies"]
description = "CI-aware egress network threat detector powered by Flodbadd"
license = "Apache-2.0"
repository = "https://github.com/edamametechnologies/flodviddar"

[features]
# Enable packet capture by default (requires elevated privileges in CI)
# It can be disabled with `--no-default-features` when building.
default = ["packetcapture"]
packetcapture = ["flodbadd/packetcapture"]

[dependencies]
flodbadd = { path = "../flodbadd", features = ["packetcapture"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1" 